# mathlogic

./: CMakeLists.txt  README.md  axiomas.h  axioms.cpp  axioms.h  expression.cpp  expression.h  expression_scheme.cpp  expression_scheme.h  expression_storage.cpp  expression_storage.h  parser.cpp  parser.h  pr_a.cpp  pr_b.cpp  pr_c.cpp  predicate.cabal  proof.cpp  proof.h  scheme_definer.cpp  test.cpp  util.cpp  util.h
Predicate/: Annotation.hs  Expression.hs  Main.hs  Proof.hs  Schema.hs  Sum.hs
Propositional/: axioms.cpp  axioms.h  expression.h  parser.h  pr_a.cpp  pr_b.cpp  pr_c.cpp
